<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settingsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/settings"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/limittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/setting_limit"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/limitinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:digits="0123456789"
                    android:ems="7"
                    android:hint="@string/hint_limit"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textColorHint="?android:attr/textColorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/limittext2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="center_vertical"
                        android:text="@string/vibrate"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <com.rm.rmswitch.RMSwitch
                        android:id="@+id/switchvib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:checked="true"
                        app:enabled="true"
                        app:forceAspectRatio="false"
                        app:switchBkgCheckedColor="@android:color/holo_green_dark"
                        app:switchBkgNotCheckedColor="@android:color/holo_red_dark"
                        app:switchDesign="large"
                        app:switchToggleCheckedColor="@android:color/white"
                        app:switchToggleNotCheckedColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/aboutheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/about"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutheader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/app_credit"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:backgroundTint="?android:attr/textColorPrimary"
        android:text="@string/save"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>